Update for TE Instructions 4.0.3